# MARKET-CREATE-

./: .gitignore  README.md  babel.config.js  hardhat.config.js  jest.config.js  package.json  pyproject.toml  requirements.txt  shared_dependencies.md  truffle-config.js  tsconfig.json  webpack.config.js
ai/: ai_integration.py  content_moderation.py  nlp_model.py  personalization.py  real_time_analytics.py  voice_to_text.py
blockchain/: arbitrum_setup.js  nova_integration.js
blockchain/contracts/: AssetContract.sol  AssetContract.test.sol  MarketplaceContract.sol  MarketplaceContract.test.sol  RoyaltyContract.sol  RoyaltyContract.test.sol
blockchain/utils/: deploy.js  interact.js
docs/: advanced_security_compliance_features.md  ai_machine_learning.md  ai_powered_script_pad.md  ai_powered_script_pad_upgrades.md  arbitrum_nova_integration.md  backend_enhancements.md  collaboration_networking_enhancements.md  comprehensive_api_ecosystem.md  development_approach.md  enhanced_ai_agent_ecosystem.md  expanded_digital_asset_marketplace.md  frontend_development.md  introduction.md  product_overview.md  security_compliance_privacy.md  technical_specifications.md
public/: index.html  manifest.json  robots.txt
scripts/: audit_contracts.sh  build_frontend.sh  deploy_contracts.sh  generate_docs.sh  run_tests.sh  seed_database.js  start_server.sh
server/: index.js
server/controllers/: elysiumController.js
server/middleware/: authMiddleware.js
server/models/: AssetModel.js  TransactionModel.js  UserModel.js
src/: App.tsx  index.tsx  setupTests.ts
(+36 files in other folders)
