[tool.poetry]
name = "elysium_marketplace"
version = "0.1.0"
description = "Backend services for Elysium Marketplace, leveraging AI and blockchain technologies."
authors = ["Elysium Development Team <devteam@elysiummarketplace.com>"]

[tool.poetry.dependencies]
python = "^3.8"
FastAPI = "^0.65.2"
uvicorn = "^0.13.4"
SQLAlchemy = "^1.4.15"
psycopg2-binary = "^2.8.6"
python-multipart = "^0.0.5"
passlib = "^1.7.4"
python-jose = "^3.2.0"
requests = "^2.25.1"
PyJWT = "^2.0.1"
aiortc = "^1.2.1"
numpy = "^1.20.3"
pandas = "^1.2.4"
scikit-learn = "^0.24.2"
nltk = "^3.6.2"
torch = "^1.8.1"
transformers = "^4.6.1"
python-dotenv = "^0.17.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.5b1"
isort = "^5.8.0"
mypy = "^0.812"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"